--- a/Jammin411/Views/Home/Contact.cshtml
+++ b/Jammin411/Views/Home/Contact.cshtml
@@ -1,17 +1,16 @@
 ﻿@{
     ViewData["Title"] = "Contact";
 }
-<h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
-
-<address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+<div class="row">
+    <div class="col">
+        <h1 class="text-info">Address</h1>
+        <address>
+            Brownsville, TX 78526<br />
+        </address>
+    </div>
+    <div class="col">
+        <h1 class="text-info">Email</h1>
+        <strong>Email:</strong> <a href="mailto:justin@jammin411.com">justin@jammin411.com</a>
+    </div>
+</div>
