--- a/Jammin411/Views/Home/Favorites.cshtml
+++ b/Jammin411/Views/Home/Favorites.cshtml
@@ -8,18 +8,31 @@
 <div class="row">
     <div class="col">
         <div class="card">
+            <img class="card-img-top" src="~/images/Tabulator.PNG" alt="DataTables.net">
+            <div class="card-body">
+                <h5 class="card-title">Tabulator</h5>
+                <p class="card-text">
+                    Tabulator allows you to create interactive tables in seconds from any HTML Table, Javascript Array, AJAX data source or JSON formatted data.
+                    It comes with a complete set of CSS classes to make styling your tables a doddle. Simply include the library in your project and you're away!
+
+                </p>
+                <a href="~/Examples/Tabulator" class="btn btn-primary" target="_blank">Tabulator Example</a>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card">
             <img class="card-img-top" src="~/images/boxshadows.PNG" alt="DataTables.net">
             <div class="card-body">
                 <h5 class="card-title">Box Shadows</h5>
                 <p class="card-text">
-                    I found a Box Shadows CSS package that I really liked.  It is simple, easy to use and get up and running, and works on every 
-                    element I tried it on.  Has a range of options as well as hover effects.  Highly extensible and is well documented.  
+                    I found a Box Shadows CSS package that I really liked.  It is simple, easy to use and get up and running, and works on every
+                    element I tried it on.  Has a range of options as well as hover effects.  Highly extensible and is well documented.
                 </p>
                 <a href="~/Examples/BoxShadows" class="btn btn-primary" target="_blank">Box Shadows Example</a>
             </div>
         </div>
     </div>
-    <div class="col"></div>
     <div class="col"></div>
 </div><br /><br />
 
